SIVA-123 certificateChain support